css/style.css
/* 
Project Name: Blank Template
Client: Your Client
Author: Your Name
Developer @GA in NYC
*/


/******************************************
/* SETUP                   
/*******************************************/

/* Box Model Hack */
* {
     -moz-box-sizing: border-box; /* Firexfox */
     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
     box-sizing: border-box; /* IE */
}

/* Clear fix hack */
.clearfix:after {
     content: ".";
     display: block;
     clear: both;
     visibility: hidden;
     line-height: 0;
     height: 0;
}

.clear {
	clear: both;
}

.alignright {
	float: right; 
	padding: 0 0 10px 10px; /* note the padding around a right floated image */
}

.alignleft {
	float: left; 
	padding: 0 10px 10px 0; /* note the padding around a left floated image */
}

/******************************************
/* BASE STYLES                   
/*******************************************/

body {
     color: #000;
     font-size: 16px;
     line-height: 1.5;
     font-family: 'Source Sans Pro', sans-serif;
     margin:0%;
}

/******************************************
/* mobile          
/*******************************************/

header {
    background-color: black;
    border-bottom: 4px solid yellow;
}

nav {
    display: none;
}

.hamburger {
  float: left;
  width: 15%;
  padding-top: 6%;
  padding-left: 4%;
}

h1 {
    color: #FFFB4C;
    font-size: 2.5em;
    padding-top: 2%;
    font-weight: bold;
    float: left;
}

h2 {
  display: none;
}

h3 {
  font-family: 'Merriweather', serif;
  font-size: 1.25em;
  font-weight: bold;
  padding-bottom: 1%;
}

p {
  padding-bottom: 5%;
}

.p_browser {
  display: none;
}

.hero {
  background: url(../images/coworking.jpg) center center no-repeat;
  background-size: cover;
  overflow: hidden;
  padding: 3%;
  box-shadow: inset 0 0 5px rgba(0,0,0,.75);
}

.overlay {
  border: 1px solid black;
  width: 65%;
  height: 90%;
  background: rgba(255, 255, 255, 0.85);
  padding: 5%;
  float: right;
}

.overlay p {
  padding-bottom: 10%;
}

.button {
  background-color: #C6C6C6;
  text-align: center;
  text-transform: uppercase;
  width: 99%;
  margin: auto;
  border-radius: 3px;
  box-shadow: inset 0 -3px 0 rgba(0,0,0,.2);
  font-size: .8em;
}

.button a {
  text-decoration: none;
  color: black;
  width: 100%;
}

.button h3 {
  font-family: 'Oswald', sans-serif;
  padding: 1%;
}

.top {
  background-color: #FFF64B;
}

div {
  padding: 3%;
}

footer {
  background-color: black;
  color: white;
  padding: 2%;
}

/******************************************
/* tablet
/*******************************************/

@media only screen and (min-width: 768px) {

  nav {
    display: block;
  }

  .hamburger {
    display: none;
  }

  nav ul {
    width: 80%;
    float: right;
  }

  nav li {
    display: inline-block;
    padding-bottom: 3%;
    padding-top: 1%;
    width: 16%;
  }

  nav a {
    color: white;
    text-decoration: none;
  }

  h2 {
    display: block;
    background-color: #C6C6C6;
    text-align: center;
    font-size: 1.5em;
    padding: 2%;
    font-style: italic;
  }

  h2.taste {
    color: #999999;
    text-decoration: line-through;
  }

  h2.are {
    border-bottom: 1px solid #FFF835;
  }

  .p_mobile {
    display: none;
  }

  .p_browser {
    display: block;
  }

  .overlay {
    width: 40%;
  }

  .benefit {
    float: left;
    width: 33.333%;
    border-right: 1px solid #999999;
  }

  .benefit:last-of-type {
    border-right: none;
  }

}


/******************************************
/* desktop       
/*******************************************/

@media only screen and (min-width: 1024px) {

  .overlay {
    width: 30%;
  }


}

